elk/backing/minikube/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
        ports:
        - containerPort: 9200
          name: rest
        - containerPort: 9300
          name: inter-node
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-nodeport
  labels:
    app: elasticsearch
spec:
  type: NodePort
  ports:
  - port: 9200
    targetPort: 9200
    nodePort: 30092
    name: rest
  - port: 9300
    targetPort: 9300
    nodePort: 30093
    name: inter-node
  selector:
    app: elasticsearch
