elk/backing/minikube/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.16.2
        ports:
        - containerPort: 5601
          name: rest
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-nodeport
  labels:
    app: kibana
spec:
  type: NodePort
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30056
    name: rest
  selector:
    app: kibana
