elk/backing/minikube/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kibana.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-nodeport
                port:
                  number: 5601
